--- a/MusicGenTest.html
+++ b/MusicGenTest.html
@@ -1,6 +1,8 @@
 <html>
 	<body bgcolor="FFFFFF">
+		<script src="MusicUtil.js"></script>
 		<script src="MusicGenerator.js"></script>
+		<script src="Voices.js"></script>
 		<script src="Synth.js"></script>
 		<script src="MusicPlayer.js"></script>
 		<script src="Main.js"></script>
